--- a/src/components/Common/Header/style.module.css
+++ b/src/components/Common/Header/style.module.css
@@ -90,5 +90,5 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 9999;
+  z-index: 111;
 }
